# agy-headless-bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  posix_report.yml
.github/workflows/: publish.yml  registry-publish.yml
docs/: index.html
src/agy_headless_bridge/: __init__.py  __main__.py  bridge.py  mcp_server.py
tests/: test_smoke.py
