[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agy-headless-bridge"
version = "1.0.0"
description = "Call the Google Antigravity CLI (agy) headlessly from any non-TTY context (subprocess, MCP, CI). Works around upstream bug #76."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "agy-headless-bridge contributors" }]
keywords = ["antigravity", "agy", "gemini", "mcp", "claude-code", "pty", "conpty"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]

# pywinpty is only needed on Windows; POSIX uses the stdlib `pty` module.
dependencies = ["pywinpty>=2.0 ; sys_platform == 'win32'"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
agy-bridge = "agy_headless_bridge.bridge:main"
agy-mcp-server = "agy_headless_bridge.mcp_server:main"

[project.urls]
Homepage = "https://github.com/rhishi99/agy-headless-bridge"
Issues = "https://github.com/rhishi99/agy-headless-bridge/issues"

[tool.setuptools.packages.find]
where = ["src"]
